# qdrant-loader

./: .gitignore  .markdownlint.jsonc  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  TECHNICAL_AUDIT_PLAN.md  check_metadata.py  pyproject.toml  release.py
.cursor/rules/: ai-developer-guide.mdc  ai-expert.mdc  back-end-dev.mdc  tech-writer.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs-auto.yml  docs-manual.yml  publish.yml  quality-gates.yml  test.yml
audits/docs/: AuditInstructions.md  DocumentationAuditList.md
audits/qa/: AuditInstructions.md  TestsAuditList.md
audits/qa/results/tests/: audit_conftest.md  audit_init.md  audit_test_cleanup.md  audit_test_favicon_generation.md  audit_test_link_checker.md  audit_test_website_build.md  audit_test_website_build_comprehensive.md  audit_test_website_build_edge_cases.md
audits/tech/: AuditInstructions.md
data/improvements/: additional-graph-relationships.md  document-relationship-analysis.md  document-relationship-improvements.md  graph-vs-metadata-relationship-analysis.md  semantic-relationships-in-graph.md
docs/: TOC.md  _inventory.csv  _inventory_sources.txt  _mappings.csv  _progress.md  documentation-debt.md
docs/developers/: README.md  search-enhancement-roadmap.md
docs/developers/architecture/: README.md
docs/developers/cli/: README.md
docs/developers/deployment/: README.md
docs/developers/documentation/: README.md  style-guide.md  workflow-guide.md
docs/developers/documentation/templates/: feature-template.md
docs/developers/extending/: README.html  README.md
docs/developers/mcp-server/: detect_document_conflicts_performance_analysis.md
docs/developers/testing/: README.md
docs/developers/troubleshooting/: CLI_STARTUP_OPTIMIZATION.md
docs/getting-started/: README.md  basic-configuration.md  core-concepts.md  installation.md  quick-start.md  what-is-qdrant-loader.md
docs/users/: README.md
docs/users/cli-reference/: README.md  commands.md
docs/users/configuration/: README.md  config-file-reference.md  environment-variables.md  security-considerations.md  workspace-mode.md
docs/users/detailed-guides/data-sources/: README.md  confluence.md  git-repositories.md  jira.md  local-files.md  public-docs.md
docs/users/detailed-guides/file-conversion/: README.md
docs/users/detailed-guides/mcp-server/: README.md  attachment-search.md  hierarchy-search.md  search-capabilities.md  setup-and-integration.md
docs/users/troubleshooting/: README.md  common-issues.md  connection-problems.md  error-messages-reference.md  performance-issues.md
docs/users/workflows/: cicd-integration-workflow.md  common-workflows.md  content-management-workflow.md  development-workflow.md  team-collaboration-workflow.md
tests/: conftest.py  test_cleanup.py  test_favicon_generation.py  test_link_checker.py  test_website_build.py  test_website_build_comprehensive.py  test_website_build_coverage_boost.py  test_website_build_edge_cases.py
venv-ci/: pyvenv.cfg
website/: build.py  check_links.py
website/assets/: generate_favicons.py
website/assets/css/: docs.css
website/assets/js/: codeux.js  mermaid-init.js  search.js
website/builder/: __init__.py  assets.py  core.py  markdown.py  templates.py
website/templates/: 404.html  base.html  coverage-index.html  docs-index.html  index.html
